# learning-stream-processing

./: README.md  docker-compose.yml  presentation.md
flink-data-processor/: pom.xml
flink-data-processor/src/main/java/org/mozdzonekmit/learning/flink/: DataStreamJob.java
flink-data-processor/src/main/java/org/mozdzonekmit/learning/flink/io/: JsonDeserializationSchema.java  JsonSerializationSchema.java
flink-data-processor/src/main/java/org/mozdzonekmit/learning/flink/model/: DeserializationResult.java  Event.java  Pair.java
flink-data-processor/src/main/java/org/mozdzonekmit/learning/flink/processing/: DeserializationResultSplitter.java  PairProcessor.java
producer/: Cargo.toml
producer/src/: main.rs
