[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
rand = "0.9.2"
rdkafka = { version = "0.38.0", features = ["tokio"] }
socket2 = "0.5.5"
tokio = { version = "1.47.1", features = ["full"] }
